# WatchPane

./: clash2.yaml  ionet_device_cache.txt  pyproject.toml  requirements.txt  rustdesk.txt
client/: ._app.py  ._config.toml  ._launch_binary_mac  ._run.sh  api.py  app.py  app1.py  app3.py  app4.py  config.toml  docker_mon.txt  run.sh  schemas.py  script.cmd  settings.py
watchpane/: api.py  config.toml  main.py  resource - 副本.py  resource.py  schemas.py  settings.py  upload_by_excel.py
web/: config.toml  database.py  database.sqlite  main.py  run.sh  settings.py
