[tool.poetry]
name = "watchpane"
version = "0.1.0"
description = ""
authors = ["Tai <1174501146@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
h2o-wave = "^1.1.2"
h2o-lightwave = {extras = ["web"], version = "^1.1.2"}
websockets = "^12.0"
sqlalchemy = "^2.0.29"
aiosqlite = "^0.20.0"
playwright = "^1.42.0"
pandas = "^2.2.1"
openpyxl = "^3.1.2"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
fastapi = "^0.110.1"
requests = "^2.31.0"
schedule = "^1.2.1"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
